# claim_test_v1

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
nginx/: nginx.conf
src/claims/: models.py  serializers.py  urls.py  views.py
src/claims/migrations/: 0001_initial.py  0002_claim_applicant_signature_claim_insured_signature.py  0003_claim_hospital_days_claim_incident_type_and_more.py  0004_adddocument_page_count.py
src/common/: exceptions.py
src/common/constants/: choices.py
src/config/: urls.py  views.py  wsgi.py
src/config/settings/: base.py  local.py
src/insurances/: models.py  serializers.py  urls.py  views.py
src/insurances/migrations/: 0001_initial.py  0002_alter_insurance_member.py  0003_alter_insurance_company_alter_insurance_end_date_and_more.py
src/members/: models.py  serializers.py  urls.py  views.py
src/members/migrations/: 0001_initial.py  0002_alter_member_relation.py  0003_member_user_alter_member_relation.py  0004_member_is_ad_agreed.py
src/users/: models.py
src/users/migrations/: 0001_initial.py
src/users/serializers/: oauth_serializers.py  user_serializers.py
src/users/urls/: user_urls.py  users_urls.py
src/users/views/: oauth_views.py  user_views.py
src/utils/: fax_converter.py
