[tool.poetry]
name = "claim-back"
version = "0.1.0"
description = ""
authors = ["mimi"]
readme = "README.md"

packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = ">=3.13"
django = ">=5.1.5,<6.0.0"
djangorestframework = ">=3.15.2,<4.0.0"
python-dotenv = ">=1.0.1,<2.0.0"
psycopg2 = ">=2.9.10,<3.0.0"
drf-spectacular = ">=0.28.0,<0.29.0"
rest-framework-simplejwt = ">=0.0.2,<0.0.3"
django-cors-headers = ">=4.6.0,<5.0.0"
djangorestframework-simplejwt = ">=5.4.0,<6.0.0"
requests = ">=2.32.3,<3.0.0"
black = ">=24.10.0,<25.0.0"
isort = ">=5.13.2,<6.0.0"
PyPDF2 = "^3.0.1"
gunicorn = "^21.0.0"
pdf2image = "^1.17.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
